fixed the spacing issue with the title

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body{
     font-weight: 1000;
 }
 .title{
-    margin-top: 10%;
+    margin-top: 5%;
     text-align: center;
     font-size: xx-large;
 }
